<resources>
    <string name="app_name">Recipes</string>
    <string name="bottom_navigation_recipes">Recipes</string>
    <string name="bottom_navigation_favorites">Favorites</string>
    <string name="bottom_navigation_add_recipe">Add recipe</string>
    <string name="status_image">Status image</string>
    <string name="ready_in_minutes">Ready in minutes: %d</string>
    <string name="fab">FAB</string>
    <string name="extended_ingredients_name">Ingredient list:</string>
    <string name="instructions_name">How to cook:</string>
    <string name="recipe_photo">Recipe photo</string>
    <string name="toolbar_like">Toolbar like</string>
    <string name="Pasta_with_salmon">Pasta with salmon</string>
    <string name="search_image">Search image</string>
    <string name="save_error">Save error</string>
    <string name="delete_error">Deletion error</string>
    <string name="recipe_title">Recipe name<font color='#FF0000'>*</font></string>
    <string name="cooking_time">Ready in minutes<font color='#FF0000'>*</font></string>
    <string name="recipe_instructions_name">Method<font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="add_ingredients_required">Add ingredients<font color='#FF0000'>*</font></string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="ingredient_name_required">Ingredient name<font color='#FF0000'>*</font></string>
    <string name="ingredient_amount">Amount</string>
    <string name="ingredient_unit">Measure</string>
    <string name="add_your_recipe">Add your recipe</string>
    <string name="ingredient_amount_required">Amount<font color='#FF0000'>*</font></string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="fill_field">Fill in the field</string>
    <string name="add_ingredients">Please add ingredients</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="video">Video</string>
    <string name="chiken">Chiken</string>
    <string name="delete">Delete</string>
    <string name="alert_dialog_message">Are you sure you want to delete this recipe?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>