<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/fragment_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/margin_between_elements"
            android:layout_marginEnd="@dimen/margin_between_elements"
            android:text="@string/add_your_recipe"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/recipe_title_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipe_title_label"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/recipe_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipe_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ready_in_time_label"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/cooking_time"
            app:layout_constraintBottom_toTopOf="@id/card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_title_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ready_in_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:backgroundTint="@color/white"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ready_in_time_label">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ingredients_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ready_in_time_label">

                <TextView
                    android:id="@+id/error_text"
                    style="@style/Widget.Recipe.Header"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/margin_between_elements"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    android:text = "@string/add_ingredients"
                    android:textColor="@color/red_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="320dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/grey"
                    android:drawableTop="@drawable/ic_add_recipe"
                    android:padding="8dp"
                    android:text="@string/add_ingredients_required"
                    app:layout_constraintBottom_toTopOf="@id/ingredients_list_container"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/error_text"/>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ingredients_list_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_button">


                    <TextView
                        android:id="@+id/ingredient_name"
                        style="@style/Widget.Recipe.Header"
                        android:layout_marginStart="@dimen/margin_between_elements"
                        android:text="@string/ingredient_name"
                        app:layout_constraintEnd_toStartOf="@+id/ingredient_amount"
                        app:layout_constraintHorizontal_weight="2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/ingredient_amount"
                        style="@style/Widget.Recipe.Header"
                        android:layout_below="@+id/ingredient_name"
                        android:layout_marginStart="@dimen/margin_between_elements"
                        android:text="@string/ingredient_amount"
                        app:layout_constraintEnd_toStartOf="@+id/ingredient_unit"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@+id/ingredient_name"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/ingredient_unit"
                        style="@style/Widget.Recipe.Header"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/margin_between_elements"
                        android:layout_marginEnd="@dimen/margin_between_elements"
                        android:text="@string/ingredient_unit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="1.5"
                        app:layout_constraintStart_toEndOf="@+id/ingredient_amount"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/divider"
                        style="@style/Divider"
                        android:layout_marginTop="@dimen/margin_between_elements"
                        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ingredient_unit" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_between_elements"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipe_instructions_label"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:hint="@string/recipe_instructions_name"
            app:layout_constraintBottom_toTopOf="@id/add_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipe_instructions"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/add_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_add_recipe"
            android:padding="8dp"
            android:backgroundTint="@color/grey"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/save_button"
            app:layout_constraintTop_toBottomOf="@+id/recipe_instructions_label" />
        <TextView
            android:id="@+id/add_image_text"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/margin_between_elements"
            android:text="@string/add_photo"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/add_image" />
        <Button
            android:id="@+id/delete_image"
            android:layout_width="48dp"
            android:layout_height="58dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:layout_marginEnd="8dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:foreground="@drawable/ic_delete"
            android:foregroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/add_image"
            app:layout_constraintTop_toTopOf="@+id/add_image" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/save_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

