<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:fitsSystemWindows="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id = "@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:titleEnabled="false"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/expanded_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/recipe_photo"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:visibility="gone"
                    app:titleTextColor="@color/white"
                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
                    app:layout_collapseMode="pin"/>

                <TextView
                    android:id="@+id/expanded_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:background="#501B5E20"
                    android:layout_gravity="bottom"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:maxLines="3" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ready_in_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding = "8dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@id/extended_ingredients_name"
                    app:layout_constraintEnd_toStartOf="@id/recipe_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.48"
                    app:srcCompat="@drawable/ic_ready_in_time" />

                <TextView
                    android:id="@+id/recipe_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@id/extended_ingredients_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ready_in_time"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="ready in minutes 45" />

                <TextView
                    android:id="@+id/extended_ingredients_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/extended_ingredients_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toTopOf="@id/extended_ingredients"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recipe_time"
                    tools:text="Список ингредиентов" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/edit_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue"
                    app:tint="@color/white"
                    android:contentDescription="@string/fab"
                    app:srcCompat="@drawable/ic_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/extended_ingredients_name"
                    app:layout_anchorGravity="end|clip_vertical" />

                <TextView
                    android:id="@+id/extended_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:textSize="20sp"
                    android:padding="8dp"
                    app:layout_constraintBottom_toTopOf="@id/instructions_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/extended_ingredients_name"
                    tools:text="Ингредиенты" />

                <TextView
                    android:id="@+id/instructions_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/instructions_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="8dp"
                    app:layout_constraintBottom_toTopOf="@id/instructions"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/extended_ingredients"
                    tools:text="Как приготовить:" />

                <TextView
                    android:id="@+id/instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8dp"
                    android:textSize="20sp"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/instructions_name"
                    tools:text="Этапы приготовления" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            app:tint="@color/white"
            android:contentDescription="@string/fab"
            app:srcCompat="@drawable/ic_like"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom|right|end" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <FrameLayout
        android:id="@+id/status_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

    <ImageView
        android:id="@+id/status_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/status_image" />
    </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>